# music-reviews

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.circleci/: config.yml
fixtures/: fixture.json
music_review/: asgi.py  settings.py  urls.py  wsgi.py
music_review/graphql/: api.py  utils.py
music_review/graphql/album/: filters.py  mutations.py  schema.py  types.py
music_review/graphql/performer/: filters.py  mutations.py  schema.py  types.py
music_review/graphql/review/: filters.py  mutations.py  schema.py  types.py
music_review/graphql/user/: schema.py  types.py
music_review/reviews/: admin.py  apps.py  models.py
music_review/reviews/migrations/: 0001_initial.py
reviews/: models.py
scripts/: build_fixture.py  collect_data.py
tests/: test_music_review.py
tests/graphql/: test_album_mutations.py  test_album_query.py  test_performer_mutations.py  test_review_mutations.py
