[tool.poetry]
name = "music-review"
version = "0.1.0"
description = ""
authors = ["Wojciech Malarski <w.malarski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
graphene = "^2.1.8"
graphene-django = "^2.13.0"
graphene-federation = "^0.1.0"
django-filter = "^2.4.0"
python-dotenv = "~=0.9"
django-graphql-jwt = "^0.3.1"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
django-cors-headers = "^3.5.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
flake8 = "^3.8.4"
pre-commit = "^2.7.1"
black = "^20.8b1"
mypy = "^0.782"
sqlalchemy = "^1.4.22"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
